   * Refresh text in mpv when changing RTL mode
   * Improve detect of video info - thx Janjens
   * Improve read of PNS format - thx Milenko
   * Improve split with ASSA tags - thx Leon
   * Improve drag'n'drop to list view with istm format - thx Zivko
   * Ignore text between {} when spell checking ASSA/SSA - thx Omair
   * Try avoid set mpv volume to 0 - thx Janusz
* FIXED:
   * Fix tag style converting from/to ASSA - thx von Suppé
   * Fix "Title bar text" when translating - thx Andrebavila
   * Fix culture name for French translation - thx jpsdr
   * Fix waveform multiple select error - thx darbor87
   * Fix issue with "Merge short lines" in "batch convert" - thx fhtdtdj
   * Fix waveform multiple select crash - thx darbor87
   * Fix broken "Duplicate line" shortcut - thx Kelvets/OmrSi
   * Fix crash in reading .ismt - thx DarkHorse-APP2
   * Fix for PAC italic w missing space - thx Milenko
   * Fix switched total labels in RTL mode w original subtitle - thx OmrSi
   * Rollback max #lines enforce (now hidden setting) - thx pandalamp 
   * Include favorite formats in "reset"
   * Take first audio track when loading wave form - thx Tuan-P
   * Fix issue with waveform original out of sync - thx Leon
   * Fix "Set start and set end of prev" when playing - thx Leon
   * Fix "Set end minus gap, go to next and start next here" - thx Leon
   * Fix for mpc-hc not showing video


3.6.2 (24th August 2021)
* NEW:
   * ASSA: Keep override tags (no conversion to html for italic/font etc.)
   * ASSA: Support for ScalingX/ScalingY/Spacing/Angle/Strikeout - thx ausencia
   * ASSA: Override tag helper (shortcut + custom templates)
   * ASSA: Set/get position
   * ASSA: Progress bar generator
   * ASSA: Plugin support
   * Allow custom shortcuts for plugins
   * Shortcuts for video contrast/brightness (mpv only)
   * Add shortcut for opening "Subtitle Edit data folder" (Ctrl+Alt+Shift+D)
   * Waveform "Right-click + Ctrl" will toggle select of a subtitle